--- a/README.Rmd
+++ b/README.Rmd
@@ -2,8 +2,6 @@
 output: github_document
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
-
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -18,21 +16,28 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The reference management software Citavi <https://www.citavi.com/de> allows for exports to Excel. With a bit of effort (i.e. via customized Citavi Macros) it also allows for imports from Excel. CitaviR provides functionality for dealing with Citavi data.
+The reference management software [Citavi](https://www.citavi.com/de) allows for [exports to Excel](https://www1.citavi.com/sub/manual6/en/index.html?exporting_to_excel.html). With a bit of effort (i.e. via customized Citavi Macros) it also allows for imports from Excel. `CitaviR` provides functionality for dealing with the data while it is *outside* Citavi. 
 
-## Installation
+<!-- ## Installation -->
 
-You can install the released version of CitaviR from [CRAN](https://CRAN.R-project.org) with:
+<!-- You can install `CitaviR` from GitHub with `remotes`.  -->
 
-``` r
-install.packages("CitaviR")
-```
+<!-- ```{r} -->
+<!-- remotes::install_github('m-clark/mixedup') -->
+<!-- ``` -->
 
-## Example
 
-This is a basic example which shows you how to solve a common problem:
+<!-- You can install the released version of CitaviR from [CRAN](https://CRAN.R-project.org) with: -->
 
-```{r example}
-library(CitaviR)
-## basic example code
-```
+<!-- ``` r -->
+<!-- install.packages("CitaviR") -->
+<!-- ``` -->
+
+<!-- ## Example -->
+
+<!-- This is a basic example which shows you how to solve a common problem: -->
+
+<!-- ```{r example} -->
+<!-- library(CitaviR) -->
+<!-- ## basic example code -->
+<!-- ``` -->
