--- a/README.Rmd
+++ b/README.Rmd
@@ -29,23 +29,29 @@ devtools::install_github('SchmidtPaul/CitaviR')
 
 ## Example
 
-This is a small example showing an entire work flow from start to finish.
+This is an example showing an entire work flow from start to finish. It is structured as five steps:
 
-### Step 1: Export xslx from Citavi
+ * [Step 1: Citavi to xlsx](#step-1-citavi-to-xlsx)
+ * [Step 2: xlsx to R](#step-2-xlsx-to-r)
+ * [Step 3: Process data in R](#step-3-process-data-in-r)
+ * [Step 4: R to xlsx](#step-4-r-to-xlsx)
+ * [Step 5: xlsx to Citavi](#step-5-xlsx-to-citavi)
 
-In your Citavi project open the table view,
+### Step 1: Citavi to xlsx
 
-```{r, echo=FALSE, out.width = "33%"}
+In your Citavi project open the table view.
+
+```{r, echo=FALSE, out.width = "30%"}
 knitr::include_graphics("img/Citavi_Table.png")
 ```
 
-make sure all relevant columns are selected (e.g. via making use of Citavi's [customizable selection presets](https://www1.citavi.com/sub/manual6/en/index.html?referencegridformworkspaceeditor.html)) and export to an Excel file.
+Make sure all relevant columns are selected (e.g. via Citavi's [customizable selection presets](https://www1.citavi.com/sub/manual6/en/index.html?referencegridformworkspaceeditor.html)) and export to an Excel file.
 
 ```{r, echo=FALSE, out.width = "100%"}
 knitr::include_graphics("img/Citavi_TableToExcel.png")
 ```
 
-## Step 2: Import xlsx to R
+### Step 2: xlsx to R
 
 The Excel file exported above is available as an example dataset of `CitaviR`. Furthermore, `read_Citavi_xlsx()` offers an import function based on `readxl::read_xlsx()` with some functionality specifically for xls/xlsx files created with Citavi via export to Excel.
 
@@ -56,6 +62,22 @@ path <- example_xlsx('3dupsin5refs.xlsx') # replace with path to your xlsx file
 read_Citavi_xlsx(path)
 ```
 
-## Step 3: Find duplicates
+### Step 3: Process data in R
+
+At this point there are many things one may wish to do with the data. In this example we will make use of the `CitaviR` functions to identify *obvious duplicates* and *potential duplicates*.
+
+#### 3a: Obvious duplicates
+
+TO DO
+
+#### 3b: Likely duplicates
+
+TO DO
+
+### Step 4: R to xlsx
+
+TO DO
+
+### Step 5: xlsx to Citavi
 
 TO DO
