--- a/README.Rmd
+++ b/README.Rmd
@@ -112,7 +112,7 @@ write_Citavi_xlsx(CitDat, read_path = path) # will not work for this example dat
 ```
 
 ```{r, echo=FALSE, out.width = "25%"}
-knitr::include_graphics("img/Excel_files.png")
+knitr::include_graphics("img/Excel_files_out.png")
 ```
 
 ### Step 5: xlsx to Citavi
