--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# CitaviR <img src='man/figures/logo.png' align="right" height="138" />
+<!-- # CitaviR <img src='man/figures/logo.png' align="right" height="138" /> -->
 
 <!-- badges: start -->
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
