--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 > This is an **unofficial** helper package for dealing with Citavi. </br>
 > I am not affiliated with Citavi, just a fan.
 
-The reference management software **Citavi** ([Official Website](https://www.citavi.com/de), [Official GitHub](https://github.com/Citavi)) allows for [exports to Excel](https://www1.citavi.com/sub/manual6/en/index.html?exporting_to_excel.html). With a bit of effort (i.e. via customized [Citavi macros](https://www1.citavi.com/sub/manual6/en/index.html?add_on_display_macros.html)) it also allows for [imports from Excel](https://github.com/Citavi/Macros/blob/master/CIM%20Import/CIM007%20Import%20arbitrary%20data%20from%20Microsoft%20Excel%20into%20custom%20fields%20of%20existing%20references%20by%20short%20title/readme.de.md). `CitaviR` provides functionality for dealing with the data while it is *outside* Citavi to get the most out of it. 
+The reference management software **Citavi** ([Official Website](https://www.citavi.com/de), [Official GitHub](https://github.com/Citavi)) allows for [exports to Excel](https://www1.citavi.com/sub/manual6/en/index.html?exporting_to_excel.html). With a bit of effort (i.e. via customized [Citavi macros](https://www1.citavi.com/sub/manual6/en/index.html?add_on_display_macros.html)) it also allows for [imports from Excel](https://github.com/Citavi/Macros/blob/master/CIM%20Import/CIM007%20Import%20arbitrary%20data%20from%20Microsoft%20Excel%20into%20custom%20fields%20of%20existing%20references%20by%20short%20title/readme.de.md). `CitaviR` provides functionality for dealing with the data while it is *outside* Citavi to get the most out of it. Using CitaviR goes hand in hand with using the custom Citavi macros in the [CitaviRMacros repository](https://github.com/SchmidtPaul/CitaviRMacros/blob/main/README.md).
 
 ## Installation
 
@@ -52,13 +52,13 @@ Step | CitaviR | Effort: 1st time setup | Effort: regular use
 In your Citavi project open the table view.
 
 ```{r, echo=FALSE, out.width = "30%"}
-knitr::include_graphics("img/Citavi_Table.png")
+knitr::include_graphics("man/figures/Citavi_Table.png")
 ```
 
 Make sure all relevant columns are selected (e.g. via Citavi's [customizable selection presets](https://www1.citavi.com/sub/manual6/en/index.html?referencegridformworkspaceeditor.html)) and export to an Excel file.
 
 ```{r, echo=FALSE, out.width = "100%"}
-knitr::include_graphics("img/Citavi_TableToExcel.png")
+knitr::include_graphics("man/figures/Citavi_TableToExcel.png")
 ```
 
 ### Step 2: xlsx to R
@@ -68,7 +68,7 @@ The Excel file exported above is available in `CitaviR` as the example dataset `
 ```{r example}
 library(CitaviR)
 
-path   <- example_xlsx('3dupsin5refs.xlsx') # replace with path to your xlsx file
+path   <- example_xlsx('3dupsin5refs.xlsx') # in real life: replace with path to your xlsx file
 CitDat <- read_Citavi_xlsx(path)
 
 CitDat
@@ -78,20 +78,20 @@ CitDat
 
 At this point there are many things one may wish to do with the data. In this example we will make use of the `CitaviR` functions to identify and handle *obvious duplicates*.
 
-#### find obvious duplicates
+#### Find obvious duplicates
 
 ```{r}
 CitDat <- CitDat %>% 
   find_obvious_dups()
 ```
 
-One way of identifying *obvious duplicates* is via `CitaviR::find_obvious_dups()`. In short, it first creates a `clean_title` by combining each reference's `Title` and `Year` into a simplified string. This simplification *e.g.* converts to all-lowercase, removes special characters and removes unnecessary spaces. If two references have the same `clean_title`, they are identified as *obvious duplicates*. In this example, two references were indeed identified as *obvious duplicates*:
+One way of identifying *obvious duplicates* is via `CitaviR::find_obvious_dups()`. In short, it first creates a `clean_title` by combining each reference's `Title` and `Year` into a simplified string. This simplification is based on `janitor::make_clean_names()` and *e.g.* converts to all-lowercase, and removes special characters and unnecessary spaces. If two references have the same `clean_title`, they are identified as *obvious duplicates*. In this example, two references were indeed identified as *obvious duplicates*:
  
 ```{r}
 CitDat[, c("Title", "Year", "clean_title", "clean_title_id", "has_obv_dup", "obv_dup_id")]
 ```
  
-#### handle obvious duplicates 
+#### Handle obvious duplicates 
  
 At this point we have already gained information and could continue with steps 4 and 5. However, sometimes duplicates hold different information as it is the case here for `ct_02` and the columns `PubMed ID` and `Online address`:
 
@@ -110,19 +110,21 @@ CitDat[2:3, c("clean_title_id", "obv_dup_id", "Title", "PubMed ID", "Online addr
 
 ### Step 4: R to xlsx
 
-To export this table to Excel, `write_Citavi_xlsx()` offers an import function based on `openxlsx::write.xlsx()` with some extra functionality. For example, when supplying the same `path` we used for `read_Citavi_xlsx()` in [Step 2](#step-2-xlsx-to-r), the xlsx file will be created in the same folder with a slightly altered name:
+To export this table to Excel, `write_Citavi_xlsx()` offers an export function based on `openxlsx::write.xlsx()` with some extra functionality. For example, when supplying the same `path` we used for `read_Citavi_xlsx()` in [Step 2](#step-2-xlsx-to-r), the xlsx file will be created in the same folder with a slightly altered name:
 
 ```{r, eval=FALSE}
-write_Citavi_xlsx(CitDat, read_path = path) # will not work for this example dataset
+write_Citavi_xlsx(CitDat, read_path = path) # works in real life, but not for example data
 ```
 
 ```{r, echo=FALSE, out.width = "25%"}
-knitr::include_graphics("img/Excel_files_out.png")
+knitr::include_graphics("man/figures/Excel_files_out.png")
 ```
 
 ### Step 5: xlsx to Citavi
 
-Unfortunately, importing xlsx into Citavi is not as trivial as exporting xlsx from it. In order to generally make this work you must first
+#### Side note: 1st time setup
+
+Unfortunately, importing xlsx into Citavi is not as trivial as exporting xlsx from it. In order to make this work you must first
 
  * [enable Citavi macros](https://www1.citavi.com/sub/manual6/en/index.html?add_on_display_macros.html)
  * install an *OLE-DB-Provider*. Citavi suggests the *Microsoft Access Database Engine 2016 Redistributable Kit* as described [here in German](https://github.com/Citavi/Macros/blob/master/CIM%20Import/CIM007%20Import%20arbitrary%20data%20from%20Microsoft%20Excel%20into%20custom%20fields%20of%20existing%20references%20by%20short%20title/readme.de.md). 
@@ -133,6 +135,8 @@ Afterwards, you should be able to run the macro [**CIM007** Import arbitrary dat
 
 However, we are not actually going to use the original *CIM007* macro here, but a modified version of it. The main reason is that *CIM007* merges the imported data by `Short title`. However, for duplicates the short titles are identical. Instead, we want to merge by `ID` because it is a unique identifier for each reference.
 
-TO DO: LINK TO REPO WITH CUSTOM CITAVI MACROS WILL FOLLOW HERE
+#### Ok, then what?
 
-TO DO: SCREENSHOT
+We make use of the custom macro **[TODO]**, which can be found in the repository [CitaviRMacros](https://github.com/SchmidtPaul/CitaviRMacros/blob/main/README.md) to allow for an easier download.
+
+**TO DO: SCREENSHOT OF HOW IT WORKS**
