--- a/README.Rmd
+++ b/README.Rmd
@@ -103,7 +103,7 @@ In such a scenario it would be nice to gather all information into the one *non-
 
 ```{r}
 CitDat <- CitDat %>% 
-  handle_obvious_dups()
+  handle_obvious_dups(fieldsToHandle = c("Online address", "PubMed ID"))
 
 CitDat[2:3, c("clean_title_id", "obv_dup_id", "Title", "PubMed ID", "Online address")]
 ```
@@ -137,6 +137,6 @@ However, we are not actually going to use the original *CIM007* macro here, but 
 
 #### Ok, then what?
 
-We make use of the custom macro **[TODO]**, which can be found in the repository [CitaviRMacros](https://github.com/SchmidtPaul/CitaviRMacros) to allow for an easier download.
+We make use of the custom macro **[TODO: CIMR 002]**, which can be found in the repository [CitaviRMacros](https://github.com/SchmidtPaul/CitaviRMacros) to allow for an easier download.
 
 **TO DO: SCREENSHOT OF HOW IT WORKS**
