--- a/README.Rmd
+++ b/README.Rmd
@@ -33,9 +33,9 @@ You can install the development version of `CitaviR` from GitHub:
 devtools::install_github('SchmidtPaul/CitaviR')
 ```
 
-## Example / Workflow
+## Workflow
 
-Here is an example showing an entire work flow from start to finish. It is structured in five steps.
+The entire work flow from start to finish is structured in five steps.
 
 ```{r, echo=FALSE, out.width = "66%"}
 knitr::include_graphics("man/figures/Workflow.png")
@@ -51,4 +51,6 @@ Step | CitaviR | Effort: 1st time setup | Effort: regular use
 
 **Effort levels:** low effort :smiley:; acceptable effort :ok_hand:; can be cumbersome :fire: 
 
+### Example
 
+Click here to find an example for such a workflow (and also other resources).
