--- a/README.Rmd
+++ b/README.Rmd
@@ -43,11 +43,11 @@ knitr::include_graphics("man/figures/Workflow.png")
 
 Step | CitaviR | Effort: 1st time setup | Effort: regular use
 -|-|-|-
-[Step 1: Citavi to xlsx](#step-1-citavi-to-xlsx)       |                    | :ok_hand: | :smiley:
-[Step 2: xlsx to R](#step-2-xlsx-to-r)                 | :heavy_check_mark: | :smiley:  | :smiley:
-[Step 3: Process data in R](#step-3-process-data-in-r) | :heavy_check_mark: | :ok_hand: | :smiley:
-[Step 4: R to xlsx](#step-4-r-to-xlsx)                 | :heavy_check_mark: | :smiley:  | :smiley:
-[Step 5: xlsx to Citavi](#step-5-xlsx-to-citavi)       |                    | :fire:    | :ok_hand:
+Step 1: Citavi to xlsx       |                    | :ok_hand: | :smiley:
+Step 2: xlsx to R                | :heavy_check_mark: | :smiley:  | :smiley:
+Step 3: Process data in R | :heavy_check_mark: | :ok_hand: | :smiley:
+Step 4: R to xlsx                 | :heavy_check_mark: | :smiley:  | :smiley:
+Step 5: xlsx to Citavi       |                    | :fire:    | :ok_hand:
 
 **Effort levels:** low effort :smiley:; acceptable effort :ok_hand:; can be cumbersome :fire: 
 
