--- a/README.Rmd
+++ b/README.Rmd
@@ -43,14 +43,14 @@ knitr::include_graphics("man/figures/Workflow.png")
 
 Step | CitaviR | Effort: 1st time setup | Effort: regular use
 -|-|-|-
-Step 1: Citavi to xlsx       |                    | :ok_hand: | :smiley:
-Step 2: xlsx to R                | :heavy_check_mark: | :smiley:  | :smiley:
-Step 3: Process data in R | :heavy_check_mark: | :ok_hand: | :smiley:
-Step 4: R to xlsx                 | :heavy_check_mark: | :smiley:  | :smiley:
-Step 5: xlsx to Citavi       |                    | :fire:    | :ok_hand:
+Step 1: Citavi to xlsx    |                    | `r emo::ji("slightly_smiling_face")` | `r emo::ji("sunglasses")`
+Step 2: xlsx to R         | `r emo::ji("check")` | `r emo::ji("sunglasses")`  | `r emo::ji("sunglasses")`
+Step 3: Process data in R | `r emo::ji("check")` | `r emo::ji("slightly_smiling_face")` | `r emo::ji("sunglasses")`
+Step 4: R to xlsx         | `r emo::ji("check")` | `r emo::ji("sunglasses")`  | `r emo::ji("sunglasses")`
+Step 5: xlsx to Citavi    |                    | `r emo::ji("explode")`    | `r emo::ji("slightly_smiling_face")`
 
-**Effort levels:** low effort :smiley:; acceptable effort :ok_hand:; can be cumbersome :fire: 
+**Effort levels:** low effort `r emo::ji("sunglasses")`; acceptable effort `r emo::ji("slightly_smiling_face")`; can be cumbersome `r emo::ji("explode")` 
 
 ### Example
 
-Click here to find an example for such a workflow (and also other resources).
+Go to "Get started" at the top of the page to go through an example of such a workflow.
