--- a/vignettes/CitaviR.Rmd
+++ b/vignettes/CitaviR.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-### Step 1: Citavi to xlsx
+# Step 1: Citavi to xlsx
 
 In your Citavi project open the table view.
 
@@ -28,7 +28,7 @@ Make sure all relevant columns are selected (e.g. via Citavi's [customizable sel
 knitr::include_graphics("Citavi_TableToExcel.png")
 ```
 
-### Step 2: xlsx to R
+# Step 2: xlsx to R
 
 The Excel file exported above is available in `CitaviR` as the example dataset `3dupsin5refs.xlsx`. Furthermore, `read_Citavi_xlsx()` offers an import function based on `readxl::read_xlsx()` with some functionality specifically for xls/xlsx files created with Citavi via export to Excel.
 
@@ -41,11 +41,11 @@ CitDat <- read_Citavi_xlsx(path)
 CitDat
 ```
 
-### Step 3: Process data in R
+# Step 3: Process data in R
 
 At this point there are many things one may wish to do with the data. In this example we will make use of the `CitaviR` functions to identify and handle *obvious duplicates*.
 
-#### Find obvious duplicates
+## Find obvious duplicates
 
 ```{r}
 CitDat <- CitDat %>% 
@@ -58,7 +58,7 @@ One way of identifying *obvious duplicates* is via `CitaviR::find_obvious_dups()
 CitDat[, c("Title", "Year", "clean_title", "clean_title_id", "has_obv_dup", "obv_dup_id")]
 ```
  
-#### Handle obvious duplicates 
+## Handle obvious duplicates 
  
 At this point we have already gained information and could continue with steps 4 and 5. However, sometimes duplicates hold different information as it is the case here for `ct_02` and the columns `PubMed ID` and `Online address`:
 
@@ -75,7 +75,7 @@ CitDat <- CitDat %>%
 CitDat[2:3, c("clean_title_id", "obv_dup_id", "Title", "PubMed ID", "Online address")]
 ```
 
-### Step 4: R to xlsx
+# Step 4: R to xlsx
 
 To export this table to Excel, `write_Citavi_xlsx()` offers an export function based on `openxlsx::write.xlsx()` with some extra functionality. For example, when supplying the same `path` we used for `read_Citavi_xlsx()` in [Step 2](#step-2-xlsx-to-r), the xlsx file will be created in the same folder with a slightly altered name:
 
@@ -87,7 +87,7 @@ write_Citavi_xlsx(CitDat, read_path = path) # works in real life, but not for ex
 knitr::include_graphics("Excel_files_out.png")
 ```
 
-### Step 5: xlsx to Citavi
+# Step 5: xlsx to Citavi
 
 In this case, we make use of the custom macro [CIMR 002](https://github.com/SchmidtPaul/CitaviRMacros/tree/main/CIMR%20Import/CIMR%20002%20-%20Import%20handle_obvious_dup%20info), which is one of the macro templates provided in the repository [CitaviRMacros](https://github.com/SchmidtPaul/CitaviRMacros). As can be seen in the gif, we here store the information on which titles are obvious duplicates into *Custom field 1*, while it is made sure to keep the *PubMed ID* information present only for the obvious duplicate (=`dup_02`) and save it for the non-duplicate (=`dup_01`). Afterwards, we could delete all titles that are not `dup_01` and get rid of all obvious duplicates simultaneously without losing information.
 
