vignette image url

--- a/README.Rmd
+++ b/README.Rmd
@@ -53,4 +53,4 @@ Step 5: xlsx to Citavi    |                    | `r emo::ji("explode")`    | `r 
 
 ### Example
 
-Go to "Get started" at the top of the page to go through an example of such a workflow.
+You can find an example of such a workflow on the [Get Started page](https://schmidtpaul.github.io/CitaviR/articles/CitaviR.html).
