--- a/vignettes/CitaviR.Rmd
+++ b/vignettes/CitaviR.Rmd
@@ -14,6 +14,24 @@ knitr::opts_chunk$set(
 )
 ```
 
+# General Workflow
+
+The entire work flow from start to finish is structured in five steps.
+
+```{r, echo=FALSE, out.width = "66%"}
+knitr::include_graphics("https://github.com/SchmidtPaul/CitaviR/blob/master/man/figures/Workflow.png?raw=true")
+```
+
+Step | CitaviR | Effort: 1st time setup | Effort: regular use
+-|-|-|-
+Step 1: Citavi to xlsx    |                    | `r emo::ji("slightly_smiling_face")` | `r emo::ji("sunglasses")`
+Step 2: xlsx to R         | `r emo::ji("check")` | `r emo::ji("sunglasses")`  | `r emo::ji("sunglasses")`
+Step 3: Process data in R | `r emo::ji("check")` | `r emo::ji("slightly_smiling_face")` | `r emo::ji("sunglasses")`
+Step 4: R to xlsx         | `r emo::ji("check")` | `r emo::ji("sunglasses")`  | `r emo::ji("sunglasses")`
+Step 5: xlsx to Citavi    |                    | `r emo::ji("explode")`    | `r emo::ji("slightly_smiling_face")`
+
+**Effort levels:** low effort `r emo::ji("sunglasses")`; acceptable effort `r emo::ji("slightly_smiling_face")`; can be cumbersome `r emo::ji("explode")` 
+
 # Step 1: Citavi to xlsx
 
 In your Citavi project open the table view.
@@ -89,11 +107,7 @@ knitr::include_graphics("https://github.com/SchmidtPaul/CitaviR/blob/master/vign
 
 # Step 5: xlsx to Citavi
 
-In this case, we make use of the custom macro [CIMR 002](https://github.com/SchmidtPaul/CitaviRMacros/tree/main/CIMR%20Import/CIMR%20002%20-%20Import%20handle_obvious_dup%20info), which is one of the macro templates provided in the repository [CitaviRMacros](https://github.com/SchmidtPaul/CitaviRMacros). As can be seen in the gif, we here store the information on which titles are obvious duplicates into *Custom field 1*, while it is made sure to keep the *PubMed ID* information present only for the obvious duplicate (=`dup_02`) and save it for the non-duplicate (=`dup_01`). Afterwards, we could delete all titles that are not `dup_01` and get rid of all obvious duplicates simultaneously without losing information.
-
-<!-- ```{r, echo=FALSE, out.width = "100%"} -->
-<!-- knitr::include_graphics("https://github.com/SchmidtPaul/CitaviRMacros/blob/main/CIMR%20Import/CIMR%20002%20-%20Import%20handle_obvious_dup%20info/CIMR%20002.gif?raw=true") -->
-<!-- ``` -->
+In this case, we make use of the custom macro [CIMR 002](https://github.com/SchmidtPaul/CitaviRMacros/tree/main/CIMR%20Import/CIMR%20002%20-%20Import%20handle_obvious_dup%20info), which is one of the macro templates provided in the repository [CitaviRMacros](https://github.com/SchmidtPaul/CitaviRMacros). As can be seen in [this gif](https://github.com/SchmidtPaul/CitaviRMacros/tree/main/CIMR%20Import/CIMR%20002%20-%20Import%20handle_obvious_dup%20info#cimr-002-import-handle_obvious_dups), we here store the information which titles are obvious duplicates into *Custom field 1*, while it is made sure to keep the *PubMed ID* information present only for the obvious duplicate (=`dup_02`) and save it for the non-duplicate (=`dup_01`). Afterwards, we could delete all titles that are not `dup_01` and get rid of all obvious duplicates simultaneously without losing information.
 
 > #### Side note: 1st time setup
 >
